fix: Update ethers.js CDN path
The CDN path for ethers.js was updated to the correct `jsdelivr` URL to ensure proper loading of the library.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,7 +32,7 @@
 </head>
   <body class="bg-base-dark text-base-text">
     <div id="root"></div>
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js" type="application/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/index.tsx"></script>
   </body>
