feat: Integrate ethers.js v6 for contract interactions
Updates project dependencies and configurations to use ethers.js v6. This facilitates more robust interaction with smart contracts on the Base network.

Includes type refinements for provider states and minor UI adjustments to the Card component to accommodate new actions, such as a refresh button for the Leaderboard.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "ethers": "https://aistudiocdn.com/ethers@^6.15.0"
   }
 }
 </script>
