feat: Refactor app structure and improve UI
This commit restructures the main `App.tsx` component to adopt a more modular approach, separating concerns into distinct UI components. It also updates the `index.html` to reflect a more descriptive title and introduces new color definitions for gradients and status indicators.

Key changes include:

-  **`App.tsx` Refactor:** Replaces the monolithic `App` component with a setup that orchestrates `Header`, `TokenCreation`, and `LatestTokens` components. Wallet connection logic is also centralized and managed.
-  **UI Enhancements:** The header now features a gradient for the application name and improved wallet address display.
-  **Token Creation Simplification:** Hardcoded decimals to 18 and simplified input validation in `TokenCreation.tsx`.
-  **Latest Tokens Improvements:** `LatestTokens.tsx` now displays loading states, error messages, and a retry mechanism.
-  **New Color Definitions:** Added `gradient-start`, `gradient-end`, `green-400`, and `yellow-400` to the Tailwind CSS configuration in `index.html`.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create your own custom ERC20 tokens on the Base network instantly. Use our decentralized application to deploy tokens, view the latest creations, and see top creators." />
-    <title>Base Token Factory</title>
+    <title>Base Token Creator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@600;700&display=swap" rel="stylesheet">
@@ -24,6 +24,10 @@
               'success': '#238636',
               'error': '#DA3633',
               'info': '#1F6FEB',
+              'green-400': '#4ADE80',
+              'yellow-400': '#FACC15',
+              'gradient-start': '#58E6D9',
+              'gradient-end': '#3377FF',
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
