feat: Improve SEO and user experience
Updates meta description and page title for better search engine visibility.
Introduces a "Features" component and a scroll-to-create functionality via a button in the Header to guide users.
Enhances the "Latest Tokens" section with a more engaging empty state and improved time ago formatting.
Refines wallet selection modal to use more descriptive alt text for wallet icons.
Adds a new disconnect wallet icon to the Header for improved clarity.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Create your own custom ERC20 tokens on the Base network instantly. Use our decentralized application to deploy tokens, view the latest creations, and see top creators." />
-    <title>Base Token Creator</title>
+    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple." />
+    <title>Create ERC20 Token on Base Network | Instant Crypto Launch</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@600;700&display=swap" rel="stylesheet">
