refactor: Improve meta tags and copy
Enhances SEO by adding relevant meta tags for keywords, Open Graph, and Twitter cards. Updates application name and marketing copy across multiple components and files to better reflect the "no-code" and "instant launch" aspects of the tool, improving clarity and user experience.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple." />
     <title>Create ERC20 Token on Base Network | Instant Crypto Launch</title>
+    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple." />
+    <meta name="keywords" content="create token, base network, erc20 token, launch cryptocurrency, crypto token creator, no-code crypto, base blockchain, token generator" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bas-creator.web.app/">
+    <meta property="og:title" content="Create ERC20 Token on Base Network | Instant Crypto Launch">
+    <meta property="og:description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
+    <meta property="og:image" content="https://bas-creator.web.app/social-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bas-creator.web.app/">
+    <meta property="twitter:title" content="Create ERC20 Token on Base Network | Instant Crypto Launch">
+    <meta property="twitter:description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
+    <meta property="twitter:image" content="https://bas-creator.web.app/social-preview.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@600;700&display=swap" rel="stylesheet">
