feat: Update theme colors and font
Refactor the application's theme to use a darker background and brighter text for improved contrast and readability. Adjust primary colors and add a heavier font weight for headings.

--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Sora:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              'background': '#0D1117',
-              'surface': '#161B22',
-              'primary': '#3B82F6', // blue-500
-              'primary-hover': '#60A5FA', // blue-400
-              'text-primary': '#E6EDF3',
-              'text-secondary': '#7D8590',
-              'border': '#30363D',
+              'background': '#000000',
+              'surface': '#111111',
+              'primary': '#0052FF',
+              'primary-hover': '#3374FF',
+              'text-primary': '#FFFFFF',
+              'text-secondary': '#888888',
+              'border': '#222222',
               'success': '#238636',
               'error': '#DA3633',
               'info': '#1F6FEB',
               'green-400': '#4ADE80',
               'yellow-400': '#FACC15',
-              'gradient-start': '#58E6D9',
-              'gradient-end': '#3377FF',
+              'gradient-start': '#0052FF',
+              'gradient-end': '#C42FCD',
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-              display: ['Sora', 'sans-serif'],
+              display: ['Inter', 'sans-serif'],
             },
             boxShadow: {
-              'glow': '0 0 20px rgba(59, 130, 246, 0.2)',
+              'glow': '0 0 25px rgba(0, 82, 255, 0.3)',
             },
             keyframes: {
               fadeIn: {
