--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://bas-creator.web.app/">
     <meta property="og:title" content="Create ERC20 Token on Base Network | Instant Crypto Launch">
     <meta property="og:description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
-    <meta property="og:image" content="https://bas-creator.web.app/social-preview.png">
+    <meta property="og:image" content="https://bas-creator.web.app/social-preview.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://bas-creator.web.app/">
     <meta property="twitter:title" content="Create ERC20 Token on Base Network | Instant Crypto Launch">
     <meta property="twitter:description" content="Launch your own cryptocurrency on the Base Network in minutes. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
-    <meta property="twitter:image" content="https://bas-creator.web.app/social-preview.png">
+    <meta property="twitter:image" content="https://bas-creator.web.app/social-preview.svg">
 
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230052FF'/%3E%3Cpath d='M11 8v16h5.5c2.484 0 4.5-2.016 4.5-4.5s-2.016-4.5-4.5-4.5H11m5.5 0c2.21 0 4-1.79 4-4s-1.79-4-4-4H11' fill='none' stroke='%23FFFFFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
 
