--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disrole | Create ERC20 Tokens on Base Network Instantly</title>
-    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple." />
+    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple." />
     <meta name="keywords" content="disrole, create token, base network, erc20 token, launch cryptocurrency, crypto token creator, no-code crypto, base blockchain, token generator" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.disrole.com/">
     <meta property="og:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="og:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
+    <meta property="og:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple.">
     <meta property="og:image" content="https://www.disrole.com/social-preview.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.disrole.com/">
     <meta property="twitter:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="twitter:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, cheap, and simple.">
+    <meta property="twitter:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple.">
     <meta property="twitter:image" content="https://www.disrole.com/social-preview.svg">
+
+    <meta name="sicurezza" content="verifica-ssl">
 
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230052FF'/%3E%3Cpath d='M11 8v16h5.5c2.484 0 4.5-2.016 4.5-4.5s-2.016-4.5-4.5-4.5H11m5.5 0c2.21 0 4-1.79 4-4s-1.79-4-4-4H11' fill='none' stroke='%23FFFFFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
 
