feat: Refine website copy and error handling
Updates website meta descriptions and hero section copy to be more concise and impactful. Also improves error handling for token creation by providing more specific feedback to the user, such as distinguishing between transaction rejection and insufficient funds.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-ar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disrole | Create ERC20 Tokens on Base Network Instantly</title>
-    <meta name="description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple." />
+    <meta name="description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment." />
     <meta name="keywords" content="disrole, create token, base network, erc20 token, launch cryptocurrency, crypto token creator, no-code crypto, base blockchain, token generator" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.disrole.com/">
     <meta property="og:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="og:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple.">
+    <meta property="og:description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment.">
     <meta property="og:image" content="https://www.disrole.com/social-preview.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.disrole.com/">
     <meta property="twitter:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="twitter:description" content="Launch your own cryptocurrency on the Base Network in minutes with Disrole. Our no-code tool lets you create and deploy a custom ERC20 token with full ownership. Fast, low-cost, and simple.">
+    <meta property="twitter:description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment.">
     <meta property="twitter:image" content="https://www.disrole.com/social-preview.svg">
 
     <meta name="sicurezza" content="verifica-ssl">
