feat: Improve wallet connection and form validation
Enhance user experience by implementing a secure wallet connection flow using message signing and verification. Add input validation for token name and symbol lengths to prevent invalid token creation.

Refine UI copy and meta descriptions for better clarity and SEO.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-ar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disrole | Create ERC20 Tokens on Base Network Instantly</title>
-    <meta name="description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment." />
+    <meta name="description" content="Deploy your own ERC20 token on the Base Network using Disrole. A user-friendly, no-code tool that provides full contract ownership. Secure and efficient deployment." />
     <meta name="keywords" content="disrole, create token, base network, erc20 token, launch cryptocurrency, crypto token creator, no-code crypto, base blockchain, token generator" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.disrole.com/">
     <meta property="og:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="og:description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment.">
+    <meta property="og:description" content="Deploy your own ERC20 token on the Base Network using Disrole. A user-friendly, no-code tool that provides full contract ownership. Secure and efficient deployment.">
     <meta property="og:image" content="https://www.disrole.com/social-preview.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.disrole.com/">
     <meta property="twitter:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
-    <meta property="twitter:description" content="Instantly launch your ERC20 token on the Base Network with Disrole. Our no-code tool gives you full ownership of your custom cryptocurrency. Fast, simple, and low-cost deployment.">
+    <meta property="twitter:description" content="Deploy your own ERC20 token on the Base Network using Disrole. A user-friendly, no-code tool that provides full contract ownership. Secure and efficient deployment.">
     <meta property="twitter:image" content="https://www.disrole.com/social-preview.svg">
 
     <meta name="sicurezza" content="verifica-ssl">
