--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "ethers": "https://aistudiocdn.com/ethers@^6.15.0"
+    "ethers": "https://aistudiocdn.com/ethers@^6.15.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/"
   }
 }
 </script>
