--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta name="sicurezza" content="verifica-ssl">
 
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230052FF'/%3E%3Cpath d='M11 8v16h5.5c2.484 0 4.5-2.016 4.5-4.5s-2.016-4.5-4.5-4.5H11m5.5 0c2.21 0 4-1.79 4-4s-1.79-4-4-4H11' fill='none' stroke='%23FFFFFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
