--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta name="sicurezza" content="verifica-ssl">
 
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230052FF'/%3E%3Cpath d='M11 8v16h5.5c2.484 0 4.5-2.016 4.5-4.5s-2.016-4.5-4.5-4.5H11m5.5 0c2.21 0 4-1.79 4-4s-1.79-4-4-4H11' fill='none' stroke='%23FFFFFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,9 +76,9 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "ethers": "https://aistudiocdn.com/ethers@^6.15.0",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
     "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/"
   }
 }
