fix(ethers): Add `as const` to contractABI for correct type inference
This resolves an issue where event data was typed as `unknown`, causing "Type 'unknown' cannot be used as an index type" errors when interacting with the contract.

Also updates dependencies and CDN paths for `ethers`, `@vitejs/plugin-react`, and other core libraries.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "ethers": "https://aistudiocdn.com/ethers@^6.15.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/"
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4"
   }
 }
 </script>
