feat: Add animations and improve gas estimation
Integrates `framer-motion` to enhance user experience with smooth animations on modals and transitions. Refines the gas estimation logic for token creation on the Base network by leveraging `maxFeePerGas` for more accurate cost predictions, incorporating a buffer for price fluctuations, and improving error handling for network connectivity issues.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "ethers": "https://aistudiocdn.com/ethers@^6.15.0",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.3.19",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
