--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <meta name="sicurezza" content="verifica-ssl">
 
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230052FF'/%3E%3Cg transform='translate(6 6)'%3E%3Cg fill='%23FFFFFF'%3E%3Cpath d='M10 2c-1.39 0-2.7.36-3.84.99a.75.75 0 00-.36 1.04l.1.18c.28.51.49 1.05.6 1.62.11.58.11 1.19 0 1.77-.1.57-.31 1.11-.6 1.62l-.1.18a.75.75 0 00.36 1.04C7.3 11.64 8.61 12 10 12c3.31 0 6-2.69 6-6s-2.69-4-6-4z'/%3E%3Cpath d='M10 18c1.39 0 2.7-.36-3.84-.99a.75.75 0 00.36-1.04l-.1-.18c-.28-.51-.49-1.05-.6-1.62-.11-.58-.11-1.19 0-1.77.1-.57.31 1.11.6-1.62l.1-.18a.75.75 0 00-.36-1.04C12.7 8.36 11.39 8 10 8c-3.31 0-6 2.69-6 6s2.69 4 6 4z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%230052FF'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='central' text-anchor='middle' font-size='60' font-family='Inter, sans-serif' font-weight='900' fill='white'%3ED%3C/text%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
