fix(theme): Simplify dark mode detection
The logic for detecting the initial theme was overly complex, considering both local storage and system preferences. This change simplifies it to exclusively rely on local storage, defaulting to light mode if no preference is set. This aligns the client-side detection with the server-side logic for preventing FOUC.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script>
       // Avoids FOUC (Flash of Unstyled Content) by applying theme before page load
-      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      if (localStorage.theme === 'dark') {
         document.documentElement.classList.add('dark');
       } else {
         document.documentElement.classList.remove('dark');
