feat: Add social preview image and Farcaster support
Includes a new social preview SVG for better link sharing and adds a Farcaster icon and sharing functionality to the footer. This enhances the platform's visibility on social media.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <meta property="og:url" content="https://www.disrole.com/">
     <meta property="og:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
     <meta property="og:description" content="Deploy your own ERC20 token on the Base Network using Disrole. A user-friendly, no-code tool that provides full contract ownership. Secure and efficient deployment.">
+    <meta property="og:image" content="https://www.disrole.com/social-preview.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.disrole.com/">
     <meta property="twitter:title" content="Disrole | Create ERC20 Tokens on Base Network Instantly">
     <meta property="twitter:description" content="Deploy your own ERC20 token on the Base Network using Disrole. A user-friendly, no-code tool that provides full contract ownership. Secure and efficient deployment.">
+    <meta property="twitter:image" content="https://www.disrole.com/social-preview.svg">
 
     <meta name="sicurezza" content="verifica-ssl">
 
